# automatic-succotash

./: main.py  pyproject.toml  save_graph.py
src/: app.py
src/agent/: agent.py  tools.py
