[project]
name = "automatic-succotash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "fastmcp>=3.3.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.3.4",
    "langchain-redis>=0.2.0",
    "redis>=5.0.0",
    "uvicorn>=0.47.0",
]
